--- a/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesException.fr.resx
+++ b/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesException.fr.resx
@@ -129,4 +129,7 @@
   <data name="PASSWORD_EMPTY" xml:space="preserve">
     <value>Le mot de passe doit comporter 6 caractères ou plus.</value>
   </data>
+  <data name="UNKNOWN_ERROR" xml:space="preserve">
+    <value>Erreur inconnue.</value>
+  </data>
 </root>
