--- a/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesException.pt-PT.resx
+++ b/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesException.pt-PT.resx
@@ -129,4 +129,7 @@
   <data name="PASSWORD_EMPTY" xml:space="preserve">
     <value>A senha tem que ter 6 ou mais caracteres.</value>
   </data>
+  <data name="UNKNOWN_ERROR" xml:space="preserve">
+    <value>Erro desconhecido.</value>
+  </data>
 </root>
