--- a/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesException.resx
+++ b/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesException.resx
@@ -129,4 +129,7 @@
   <data name="PASSWORD_EMPTY" xml:space="preserve">
     <value>Password must be 6 or more characters long.</value>
   </data>
+  <data name="UNKNOWN_ERROR" xml:space="preserve">
+    <value>Unknown error.</value>
+  </data>
 </root>
